# RHML

./: CHANGELOG.md  README.md  RHbrain.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: BinomialDistribution.hs  GaussianNaiveBayes.hs  Lib.hs  LinearRegression.hs  TextCategorization.hs
src/Probability/: GaussianProbability.hs
src/Regression/: LinearRegression.hs
test/: Spec.hs  TextCategorization.hs  TextCategorization_Test.hs
