cabal-version:       2.2

name:                RHbrain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/RHbrain#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

test-suite test-my-library
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base,
    hspec,
  default-language: Haskell2010
